--- a/src/index.css
+++ b/src/index.css
@@ -66,7 +66,13 @@ h6 {
   src: url(../public/fonts/Inter-Variable.ttf);
 }
 
+* {
+  --primary-color: #3d5a80;
+  --secondary-color: #f5f5dc;
+  --cta-color: #06d6a0;
+}
+
 body {
-  background-color: #3d5a80;
+  background-color: var(--primary-color);
   height: 100dvh;
 }
