--- a/src/components/Navigation.module.css
+++ b/src/components/Navigation.module.css
@@ -12,7 +12,10 @@
   padding: 1rem;
 }
 
-.nav ul li {
+.nav ul a {
   text-decoration: none;
-  color: white;
+}
+
+:global(.active) {
+  background-color: green;
 }
