--- a/src/components/ContactComponent.module.css
+++ b/src/components/ContactComponent.module.css
@@ -1,31 +1,32 @@
 .contactContainer {
   padding: 1rem;
   text-align: center;
+  margin: 2rem 0 0;
 }
 
 .contacts {
   display: grid;
-  grid-template-columns: repeat(3, minmax(0, 1fr));
-  justify-content: center;
-  align-items: center;
+  grid-template-columns: repeat(2, minmax(0, 1fr));
   padding: 0.4rem;
+  align-items: center;
+  justify-content: center;
 }
 
 .contacts a {
-  font-size: 1.2rem;
-  color: white;
-  text-decoration: none;
-  position: relative;
-  transition: all 0.3s;
-  text-decoration: none;
   display: inline-block;
-  transition: transform 0.3s, font-weight 0.3s;
+  font-size: 1.2rem;
+  margin-bottom: 2rem;
   padding: 0.4rem;
+  text-decoration: none;
+  text-decoration: none;
+  transition: all 0.3s;
+  transition: transform 0.3s, font-weight 0.3s;
+  color: white;
 }
 
 .contacts a:hover {
   font-weight: 700;
-  animation: 1.2s infinite alternate linkHoverAnimation;
+  animation: 1.5s infinite alternate linkHoverAnimation;
   z-index: 999;
 }
 
@@ -35,11 +36,36 @@
     scale: 1;
   }
   50% {
-    rotate: 6deg;
+    rotate: 3deg;
     scale: 1.3;
   }
   to {
-    rotate: -6deg;
+    rotate: -3deg;
     scale: 1;
   }
+}
+
+.email a {
+  text-decoration: none;
+  color: white;
+  position: absolute;
+  top: 35%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  cursor: pointer;
+  font-size: 1.2rem;
+}
+
+/* Email underline animation */
+.email a::after {
+  content: "";
+  display: block;
+  width: 100%;
+  height: 1px;
+  background-color: white;
+  transition: transform 0.3s ease-in-out;
+  transform: scale(0);
+}
+.email a:hover::after {
+  transform: scale(1);
 }
