--- a/src/components/ContactComponent.module.css
+++ b/src/components/ContactComponent.module.css
@@ -2,6 +2,7 @@
   padding: 1rem;
   text-align: center;
   margin: 2rem 0 0;
+  color: var(--secondary-color);
 }
 
 .contacts {
@@ -21,7 +22,7 @@
   text-decoration: none;
   transition: all 0.3s;
   transition: transform 0.3s, font-weight 0.3s;
-  color: white;
+  color: var(--secondary-color);
 }
 
 .contacts a:hover {
@@ -47,7 +48,7 @@
 
 .email a {
   text-decoration: none;
-  color: white;
+  color: var(--secondary-color);
   position: absolute;
   top: 35%;
   left: 50%;
@@ -62,7 +63,7 @@
   display: block;
   width: 100%;
   height: 1px;
-  background-color: white;
+  background-color: var(--secondary-color);
   transition: transform 0.3s ease-in-out;
   transform: scale(0);
 }
