--- a/src/index.css
+++ b/src/index.css
@@ -67,7 +67,7 @@ h6 {
 }
 
 * {
-  --primary-color: #3d5a80;
+  --primary-color: #1f3450;
   --secondary-color: #f5f5dc;
   --cta-color: #06d6a0;
   font-family: "Inter", "Open Sans", system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Helvetica Neue", sans-serif;
