--- a/src/index.css
+++ b/src/index.css
@@ -73,6 +73,7 @@ h6 {
   font-family: "Inter", "Open Sans", system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Helvetica Neue", sans-serif;
   line-height: 1.5;
   letter-spacing: 0.03em;
+  color: var(--secondary-color);
 }
 
 body {
