--- a/src/components/Skills.module.css
+++ b/src/components/Skills.module.css
@@ -1,5 +1,15 @@
+h3 {
+  display: flex;
+  justify-content: center;
+  margin: 2rem 0 1rem;
+}
+
 .skillGrid {
   display: grid;
-  grid-template-rows: 1fr;
+  grid-template-columns: auto auto auto;
+  grid-template-rows: auto;
   text-align: center;
+  flex-wrap: wrap;
+  flex-grow: 2;
+  grid-row-end: 3 span;
 }
