--- a/src/components/ContactComponent.module.css
+++ b/src/components/ContactComponent.module.css
@@ -26,22 +26,19 @@
 
 .contacts a:hover {
   font-weight: 700;
-  animation: 1.5s infinite alternate linkHoverAnimation;
 }
 
-@keyframes linkHoverAnimation {
-  from {
-    rotate: 0deg;
-    scale: 1;
-  }
-  50% {
-    rotate: 2deg;
-    scale: 1.2;
-  }
-  to {
-    rotate: -2deg;
-    scale: 1;
-  }
+.contacts a::after {
+  content: "";
+  display: block;
+  width: 100%;
+  height: 1px;
+  background-color: var(--secondary-color);
+  transition: transform 0.3s ease-in-out;
+  transform: scale(0);
+}
+.contacts a:hover::after {
+  transform: scale(1);
 }
 
 .email a {
