--- a/src/components/Footer.module.css
+++ b/src/components/Footer.module.css
@@ -1,5 +1,8 @@
-footer {
-  margin: 3rem auto 0;
-  background-color: rgb(197, 123, 27);
-  min-height: 3rem;
+.footer {
+  height: 3rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-top: 1px solid white;
+  margin: auto;
 }
