--- a/src/components/Navigation.module.css
+++ b/src/components/Navigation.module.css
@@ -1,5 +1,4 @@
 .nav {
-  height: 10dvh;
   font-family: "Inter";
   background-color: var(--secondary-color);
 }
@@ -20,5 +19,19 @@
 }
 
 .nav a:global(.active) {
-  position: relative;
+  /* add some easy to understand styling to the active link */
+  font-weight: bold;
+}
+
+.nav a:global(.active)::after {
+  content: "";
+  display: block;
+  width: 100%;
+  height: 1px;
+  background-color: var(--secondary-color);
+  transition: transform 0.3s ease-in-out;
+  transform: scale(0);
+}
+.nav a:global(.active):hover::after {
+  transform: scale(1);
 }
