--- a/src/components/Skills.module.css
+++ b/src/components/Skills.module.css
@@ -1,4 +1,4 @@
-h3 {
+.skillsText {
   display: flex;
   justify-content: center;
   margin: 2rem 0 1rem;
@@ -6,10 +6,8 @@ h3 {
 
 .skillGrid {
   display: grid;
-  grid-template-columns: auto auto auto;
+  grid-template-columns: 33% 33% 33%;
   grid-template-rows: auto;
   text-align: center;
-  flex-wrap: wrap;
-  flex-grow: 2;
-  grid-row-end: 3 span;
+  margin-bottom: 2rem;
 }
