--- a/src/components/Navigation.module.css
+++ b/src/components/Navigation.module.css
@@ -14,24 +14,10 @@
 .nav ul a {
   font-size: 1.2rem;
   color: var(--primary-color);
-  text-decoration: none;
   font-weight: 600;
+  text-decoration: none;
 }
 
 .nav a:global(.active) {
-  /* add some easy to understand styling to the active link */
-  font-weight: bold;
-}
-
-.nav a:global(.active)::after {
-  content: "";
-  display: block;
-  width: 100%;
-  height: 1px;
-  background-color: var(--secondary-color);
-  transition: transform 0.3s ease-in-out;
-  transform: scale(0);
-}
-.nav a:global(.active):hover::after {
-  transform: scale(1);
+  border-bottom: 2px solid #1f3450;
 }
