--- a/src/components/Navigation.module.css
+++ b/src/components/Navigation.module.css
@@ -21,3 +21,19 @@
 .nav a:global(.active) {
   border-bottom: 2px solid #1f3450;
 }
+
+li img {
+  max-width: 30px;
+  position: absolute;
+  right: 4%;
+  cursor: not-allowed;
+}
+
+@media screen and (max-width: 340px) {
+  li img {
+    max-width: 30px;
+    position: absolute;
+    right: 2.5%;
+    cursor: not-allowed;
+  }
+}
