fix email hover effect

--- a/src/components/Navigation.module.css
+++ b/src/components/Navigation.module.css
@@ -29,6 +29,8 @@ li img {
   cursor: not-allowed;
 }
 
+/* HERE BE MEDIA QUERIES */
+
 @media screen and (max-width: 340px) {
   li img {
     max-width: 30px;
