--- a/src/components/ContactComponent.module.css
+++ b/src/components/ContactComponent.module.css
@@ -18,7 +18,6 @@
 .contacts a {
   display: inline-block;
   font-size: 1.2rem;
-  margin-bottom: 2rem;
   padding: 0.4rem;
   text-decoration: none;
   transition: all 0.3s;
@@ -51,11 +50,11 @@
 }
 
 .email a {
-  text-decoration: none;
-  position: relative;
-  transform: translate(-50%, -50%);
-  cursor: pointer;
+  display: inline-block;
   font-size: 1.2rem;
+  margin-bottom: 2rem;
+  padding: 0.4rem;
+  text-decoration: none;
   transition: all 0.3s;
   transition: transform 0.3s, font-weight 0.3s;
 }
