--- a/src/components/Navigation.module.css
+++ b/src/components/Navigation.module.css
@@ -26,7 +26,7 @@ li img {
   max-width: 30px;
   position: absolute;
   right: 4%;
-  cursor: not-allowed;
+  cursor: pointer;
 }
 
 /* HERE BE MEDIA QUERIES */
@@ -36,6 +36,5 @@ li img {
     max-width: 30px;
     position: absolute;
     right: 2.5%;
-    cursor: not-allowed;
   }
 }
